Fixed some minor layout issues.

--- a/client/main.less
+++ b/client/main.less
@@ -280,7 +280,7 @@ table.loggedOut {
 
 .dropzoneCell {
   color: rgba(255,255,255,0.5);
-  width: 200px; 
+  width: 100%; 
   height: 200px; 
   border-width: 2px; 
   border-style: dashed; 
@@ -380,8 +380,7 @@ ul {
   width: auto;
   height: 200px;
   overflow: hidden;
-  text-align: center;
-
+  
   img {
     position: absolute;
     left: 50%;
@@ -429,6 +428,7 @@ ul {
   ::placeholder {
     color: rgba(255, 255, 255, 0.5);
   }
+
 }
 
 .mediaTypeGallery {
